--- a/contato.html
+++ b/contato.html
@@ -65,7 +65,7 @@
 				</div>
 				</a>
 				<br>
-				<h2 style="color: white">WhatsUp</h4>
+				<h2 style="color: white">Whatsapp</h4>
 				</div>
 			<div class="cenas">
 				<a href="http://m.me/antonino.ferreira.52" class="link" target="_blank">
