--- a/toy.html
+++ b/toy.html
@@ -12,7 +12,7 @@
 	</div>
 	<footer>
 		<div class="rodape">
-			<h4 class="item-1"><a href="index.html">©</a> Propriedade de Antonino Ferreira</h4>
+			<h4 class="item-1"><a href="Index.html">©</a> Propriedade de Antonino Ferreira</h4>
 		</div>
 	</footer>
 </body>
